--- a/Project1/Project1.vcxproj.filters
+++ b/Project1/Project1.vcxproj.filters
@@ -16,10 +16,25 @@
     <Filter Include="소스 파일\day1">
       <UniqueIdentifier>{adb8a437-9991-4993-96cc-2e5e418848b6}</UniqueIdentifier>
     </Filter>
+    <Filter Include="소스 파일\day2">
+      <UniqueIdentifier>{10c7784e-30a4-4df6-9857-0e2c3920a37c}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="hello.c">
       <Filter>소스 파일\day1</Filter>
+    </ClCompile>
+    <ClCompile Include="기본구조.c">
+      <Filter>소스 파일\day2</Filter>
+    </ClCompile>
+    <ClCompile Include="영어다이아몬드.c">
+      <Filter>소스 파일\day2</Filter>
+    </ClCompile>
+    <ClCompile Include="변수.c">
+      <Filter>소스 파일\day2</Filter>
+    </ClCompile>
+    <ClCompile Include="변수의 출력.c">
+      <Filter>소스 파일\day2</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
