--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,5 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /Project1.sln
+/Project1/Project1.vcxproj.filters
+/.gitignore
